src/test/resources/invalid/02_incomplete-depends.fmx
<fmx:depends>
  <main second="bibo" attr1="dodo" third="cecil">
  </main>
</fmx:depends>